# suedtirol1-tracker

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile
migrations/2020-04-07-195905_create_database/: down.sql  up.sql
src/: db.rs  main.rs  models.rs
src/db/: models.rs  schema.rs
