[package]
name = "suedtirol1-tracker"
version = "0.1.0"
authors = ["Andreas Resch <andreas@resch.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
diesel = { version = "2.1.1", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.116"
